# tree-sitter-nodekit

./: Cargo.toml  README.md  binding.gyp  grammar.js  index.d.ts  package.json  tree-sitter-nodekit.wasm  tree-sitter-svelte.wasm
bindings/node/: binding.cc  index.js
bindings/rust/: README.md  build.rs  lib.rs
queries/: folds.scm  indents.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c  tag.h  uthash.h
test/corpus/: html.txt  svelte.txt
